# binary-sparse-matrices

./: .gitignore  CMakeLists.txt  README.md  T1  T1B  T2A_0.02  T2B_0.01  T2a  T2a_0.1  T2b  T2b_0.1  compile.sh  csr_matrix_generator.cc  csr_matrix_generator.py  dense_matrix_generator.py  mainpart.cc  matrix_generator.py  r1.csv  r3.csv  r4.csv  res.csv  res2
src/: main.cc  test.cpp
src/.old/: bcsr.cc
src/csr/: bcsr.cc  bcsr.cpp  bcsr.hh  bcsr_conversion.cc  bcsr_scipy.cc
src/lil/: blil.cc  blil.hh  blil_conversion.cc  blil_scipy.cc
src/utils/: utils.cc  utils.hh
